tests/data/placebo/test_network_location_match_in_triple_intersect/ec2.CreateSecurityGroup_1.json
{
    "status_code": 200,
    "data": {
        "GroupId": "sg-0a8a19dd11a4c91d6",
        "ResponseMetadata": {}
    }
}
